<?xml version="1.0"?>
<package format="3">
  <name>wavemap_io</name>
  <version>1.6.0</version>
  <description>(De)serialization of wavemap types to files.</description>

  <maintainer email="victorr@ethz.ch">Victor Reijgwart</maintainer>
  <license>BSD</license>
  <url>https://github.com/victorreijgwart/wavemap</url>

  <author email="victorr@ethz.ch">Victor Reijgwart</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>wavemap</build_depend>

  <test_depend>ament_cmake_gtest</test_depend>
</package>
